--- a/theGameC/public/style/login.css
+++ b/theGameC/public/style/login.css
@@ -150,8 +150,15 @@ p {
   color: #1C3D5C;
   /* background-color: #0071DB; */
 }
-.gg-lock{
+.gg-lock,.gg-profile,.gg-pocket,.gg-lock-unlock{
   color: #1C3D5C;
+}
+.lockbox{
+  width: 22px;
+  /* height: 22px; */
+display: flex;
+/* align-self: center; */
+justify-content: center;
 }
 
 .lockIcon {
@@ -219,7 +226,7 @@ p {
 
 .logins:active {
   background-color: #0057A8;
-  padding: .4rem 4.9rem;
+  transform: scale(.95);
 }
 
 .line-with-circle {
@@ -256,7 +263,7 @@ p {
   text-decoration: none;
   font-weight: bold;
   color: #1C3D5C;
-  padding: 20px;
+  padding: .5rem 1.5rem;
 }
 
 .logobtn a:hover {
@@ -281,7 +288,24 @@ p {
   background-color: rgb(230, 230, 230);
 }
 
+#Verification_But{
+  position: absolute;
+  right: -50px;
+  /* left: 100px; */
+  cursor: pointer;
+  background-color: #0057A8;
+  color: #fff;
+  padding: .4rem 1rem;
+  font-size: 15px;
+  border-radius: .3rem;
+  letter-spacing: .3rem;
+}
+#Verification_But:active{
+  background-color:#1C3D5C;
+  transform: scale(.95);
+}
 .popup-wrap {
+  background-color: #0071DB;
   width: 100%;
   height: 100%;
   display: none;
@@ -294,20 +318,67 @@ p {
 }
 
 .popup-box {
+  background-color: #0071DB;
   width: 40%;
-  padding: 50px 75px;
+  padding: 4% 4%;
   transform: translate(-50%, -50%) scale(0.5);
   position: absolute;
   top: 50%;
   left: 50%;
-  box-shadow: 0px 2px 16px rgba(214, 213, 213, 0.5);
+  box-shadow: 0px 2px 16px rgba(167, 167, 167, 0.5);
   border-radius: 3px;
   background: #fff;
   text-align: center;
   display: flex;
 }
 
+.fgH1{
+  margin-bottom: 2rem;
+  color: #1C3D5C;
+  letter-spacing: .5rem;
+}
+.fgInput {
+  letter-spacing: .3rem;
+  font-weight: 500;
+  padding: 10px 0px 10px 20px;
+  width: 70%;
+  font-size: 16px;
+  border: none;
+  color: #000000;
+  margin-left: 20px;
+  font-size: 20px;
+  outline: none;
+}
 
+.fgBut{
+  width: 40%;
+  background-color:#0071DB;
+  padding: 5px 20px 5px 20px;
+  box-shadow: 5px 5px 11px rgba(26, 26, 26, 0.5);
+  color: #fff;
+  border-radius: .5rem;
+  cursor: pointer;
+  /* transform: translate(-50%, -50%) scale(1); */
+}
+.fgBut:active{
+  background-color: #1C3D5C;
+  transform:  scale(.95);
+}
+
+
+.fgdivinput {
+  /* background-color: aqua; */
+  width: 75%;
+  position: relative;
+  padding: 10px 15px;
+  /* padding-bottom: 10px; */
+  left: 12.5%;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  border-bottom: 1px solid gray;
+  margin-bottom: 2.5rem;
+}
 
 .close-btn {
   width: 25px;
@@ -349,8 +420,8 @@ p {
 }
 
 .transform-out {
-  -webkit-transform: translate(-50%, -50%) scale(0.8);
-  transform: translate(-50%, -50%) scale(0.8);
+  -webkit-transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(.9);
 }
 /* 取消驗證碼數字框的上下加減符號 */
 input[type=number]::-webkit-outer-spin-button,
